Code Review: AddBookingLogic